<resources>
    <string name="app_name">Quick DnD Tile</string>
    <string name="tile_name_dnd">QuickDnD</string>
    <string name="tile_name_mute_ringer">QuickMuteMedia</string>
    <string name="Welcome">Welcome to Dnd quick-settings tile app. Thank you for installing Dnd. Start using the app by adding following tile to the toolbar.</string>
    <string name="Min">&#160;Min</string>
    <string name="Min_0">0 Min</string>
    <string name="Min_15">15 Min</string>
    <string name="Min_30">30 Min</string>
    <string name="Min_60">60 Min</string>
    <string name="Min_infinity">End of the world &#8230;</string>
    <string name="Err_permission">Missing DnD Permission</string>
    <string name="Mute_media">(media)</string>
    <string name="Mute_alarm">(alarm)</string>
    <string name="Mute_ringer">(ringer)</string>
    <string name="Filter_Total">Total Silence</string>
    <string name="Filter_Priority">Priority Only</string>
    <string name="Filter_Alarm">Alarm Only</string>
    <string name="advice_mode">Chose DnD mode</string>
    <string name="advice_duration">Choose DnD duration</string>
    <string name="advice_mute">Happy to just mute</string>
    <string name="toast_silent">Ringer is in Silent mode</string>
    <string name="toast_normal">Ringer is in Normal mode</string>
    <string name="toast_vibrate">Ringer is in Vibrate mode</string>
    <string name="toast_post_total">Total Silence</string>
    <string name="toast_post_priority">Priority Only</string>
    <string name="toast_post_alarms">Alarms Only</string>
    <string name="toast_mute_media">Media volume is set to zero</string>
</resources>
