<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/advice_mode"
            style="@style/dnd_text_advice"
            android:layout_alignParentStart="true"
            android:text="@string/advice_mode" />

        <LinearLayout
            android:id="@+id/modeButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/advice_mode"
            android:gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginStart="30dp" >
            <Button
                android:id="@+id/buttonModeTotal"
                style="@style/mode_button"
                android:background="@drawable/gradient_clicked"
                android:text="@string/Filter_Total" />

            <Button
                android:id="@+id/buttonModePriority"
                style="@style/mode_button"
                android:background="@drawable/gradient"
                android:text="@string/Filter_Priority"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <Button
                android:id="@+id/buttonModeAlarm"
                style="@style/mode_button"
                android:background="@drawable/gradient"
                android:text="@string/Filter_Alarm" />
        </LinearLayout>

        <TextView
            android:id="@+id/advice_duration"
            style="@style/dnd_text_advice"
            android:layout_width="match_parent"
            android:layout_alignTop="@+id/modeButtons"
            android:layout_marginTop="80dp"
            android:text="@string/advice_duration" />

        <LinearLayout
            android:id="@+id/timeButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/advice_duration"
            android:layout_marginTop="60dp">

            <Button
                android:id="@+id/buttonTime_15"
                style="@style/time_button"
                android:layout_marginStart="20dp"
                android:text="@string/Min_15" />

            <Button
                android:id="@+id/buttonTime_30"
                style="@style/time_button"
                android:layout_marginStart="10dp"
                android:text="@string/Min_30" />

            <Button
                android:id="@+id/buttonTime_60"
                style="@style/time_button"
                android:layout_marginStart="10dp"
                android:text="@string/Min_60" />

            <Button
                android:id="@+id/buttonTime_Infinity"
                style="@style/time_button"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/Min_infinity" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewSeek"
            style="@style/dnd_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_alignTop="@+id/timeButtons"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:text="@string/Min_0" />

        <SeekBar
            android:id="@+id/seekBar"
            android:thumb="@drawable/seekbar_thumb"
            android:progressDrawable="@drawable/seekbar"
            android:thumbOffset="1dp"
            android:layout_width="2000dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textViewSeek"
            android:layout_marginTop="40dp"
            android:max="120" />

        <ImageButton
            android:id="@+id/buttonGo"
            style="@style/icon_button"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/seekBar"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_button_go" />

        <TextView
            android:id="@+id/advice_mute"
            style="@style/dnd_text_advice"
            android:layout_alignTop="@+id/buttonGo"
            android:layout_marginTop="60dp"
            android:text="@string/advice_mute" />

        <LinearLayout
            android:id="@+id/muteButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/advice_mute"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp" >

            <Button
                android:id="@+id/buttonAlarm"
                style="@style/icon_text_button"
                android:layout_alignTop="@+id/advice_mute"
                android:drawableTop="@drawable/ic_button_mute_alarm"
                android:text="@string/Mute_alarm"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/buttonMusic"
                style="@style/icon_text_button"
                android:layout_alignTop="@+id/advice_mute"
                android:drawableTop="@drawable/ic_button_mute_media"
                android:text="@string/Mute_media"
                android:textColor="@android:color/darker_gray" />

            <Button
                android:id="@+id/buttonRinger"
                style="@style/icon_text_button"
                android:layout_alignTop="@+id/advice_mute"
                android:drawableTop="@drawable/ic_button_mute_ringer"
                android:text="@string/Mute_ringer"
                android:textColor="@android:color/darker_gray" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>